# meetech-bot-production

./: .dockerignore  .env  .gitignore  .mailmap  QUICK_START.txt  README.md  STRUCTURE.txt  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py
config/proof_assets/: seed_assets.yaml
scripts/: backup_db.sh  deploy.sh  validate_quickstart.py
src/: __init__.py
src/api/: admin.py  agent.py  gdpr.py  health.py  main.py  webhook.py
src/db/: connection.py  redis_client.py
src/integrations/: calendar.py  calendar_calendly.py  calendar_google.py  crm.py  crm_hubspot.py  crm_notion.py  llm_client.py  whatsapp_client.py
src/models/: __init__.py  conversation.py  enums.py  follow_up.py  human_agent.py  lead.py  lead_score.py  message.py  proof_asset.py  state_transition.py
src/repositories/: conversation_repository.py  follow_up_repository.py  human_agent_repository.py  lead_repository.py  lead_score_repository.py  message_repository.py  proof_asset_repository.py
src/services/: analytics_service.py  follow_up_scheduler.py  handover_service.py  intent_detector.py  lead_scorer.py  message_processor.py  proof_asset_selector.py  qualification_service.py  response_generator.py  session_manager.py  state_machine.py
src/utils/: content_filter.py  error_tracker.py  logger.py  metrics.py  rate_limiter.py  state_logger.py
src/workers/: celery_app.py  cleanup_worker.py  follow_up_worker.py
tests/: conftest.py
tests/api/: test_health.py  test_webhook.py
tests/integration/: test_integrations.py
tests/unit/: test_models.py  test_services.py  test_state_machine.py  test_utils.py
